[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
[project]
name = "koios-api"
version = "1.0.10"
authors = [
  { name="APEX Stake Pool", email="cardanoapexpool@gmail.com" },
]
description = "A python package for the Cardano Blockchain Koios API (https://api.koios.rest/)"
keywords = [
    "koios",
    "cardano",
    "blockchain",
    "REST",
    "API"
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.20.0"
]

[project.urls]
"Homepage" = "https://github.com/cardano-apexpool/koios-api-python"
"Bug Tracker" = "https://github.com/cardano-apexpool/koios-api-python/issues"
